--- a/client/client_config.yaml
+++ b/client/client_config.yaml
@@ -1,6 +1,6 @@
 # CONFIGURATION FILE FOR CLIENT
-model_folder: path/to/model
-model_name: model_name.pth
+model_folder: CLIENT_MODEL
+model_name: client.pth
 
 # CAN HAVE DEEP LEARNING CONFIG HERE ITSELF
 
