--- a/server_config.yaml
+++ b/server_config.yaml
@@ -1,6 +1,6 @@
 # CONFIGURATION FILE FOR THE SERVER
-name: some_name.pth
-model_path: path/to/model
-client_updates_path: ffolder/to/store/updates/from/client
+name: BETA_TEST_V0.1
+model_path: GLOBAL/global_model.pth
+client_updates_path: CLIENT_UPDATES
 
 #DEEP LEARNING CONFIG?
