--- a/client/client_config.yaml
+++ b/client/client_config.yaml
@@ -4,5 +4,5 @@ model_name: client.pth
 
 # CAN HAVE DEEP LEARNING CONFIG HERE ITSELF
 
-HOST: '127.0.0.1'
-PORT: 9865
+HOST: "0.tcp.ngrok.io"
+PORT: 14966
