--- a/client/client_config.yaml
+++ b/client/client_config.yaml
@@ -1,8 +1,37 @@
 # CONFIGURATION FILE FOR CLIENT
+
+# MODEL
 model_folder: CLIENT_MODEL
 model_name: client.pth
+arch: "resnext101_32x8d"
 
-# CAN HAVE DEEP LEARNING CONFIG HERE ITSELF
-
+# IP 
 HOST: "2.tcp.ngrok.io"
 PORT: 10987
+
+# DATASET
+dataset: "classification" # choices: classification, detection
+labels: ['epidural', 'intraparenchymal', 'intraventricular', 'subarachnoid', 'subdural', 'any']
+n_classes: 6 # should match len(labels)
+
+# TRANSFORMS
+# TODO
+
+# TRAINING
+train_csv_file: ""
+train_image_dir: ""
+train_batch_size: 64
+
+# PARAMS
+epochs: 15
+lr: 0.00002
+device: "cuda" # choices: cpu, cuda
+optimizer: "Adam" # choices: Adam, SGD
+
+
+# TESTING
+test_csv_file: ""
+test_image_dir: ""
+test: False # need to see logic, idea is to use when only training and not validating
+test_batch_size: 1
+
