--- a/server/server_config.yaml
+++ b/server/server_config.yaml
@@ -10,3 +10,9 @@ PORT: 9865
 
 arch: 'resnext101_32x8d'
 n_classes: 6
+
+
+# FL PARAMS
+rounds: 15 
+max_clients: 5
+aggregation: 'mean' #choices: mean
