--- a/server/server_config.yaml
+++ b/server/server_config.yaml
@@ -3,6 +3,8 @@ name: BETA_TEST_V0.1
 model_path: GLOBAL/global_model.pth
 client_updates_path: CLIENT_UPDATES
 
+mode: "classification"
+
 HOST: ""
 PORT: 9865
 
