--- a/react-app/package.json
+++ b/react-app/package.json
@@ -2,10 +2,12 @@
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:9865",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "http-proxy-middleware": "^1.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
@@ -34,6 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "https://localhost:9865"
+  }
 }
